画像の上に文字を入れた

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <!-- ここから画像７列(imgを使ったが、tableを使うべき？) -->
         <!-- 画像１列目 -->
         <div class="firstColumm">
-            <div>
+            <div class="fontPosition">
                 <a href="https://www.team-lab.com/"><img src="test.jpg" width="600px" height="200px"></a>
                 <p>内容</p>
             </div>
-            <div>
+            <div class="fontPosition">
                 <a href="https://www.team-lab.com/"><img src="test.jpg" width="600px" height="200px"></a>  
                 <p>内容</p>
             </div>
